--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
           <nav>
             <ul>
               <li id="home"><a href="index.html">HOME</a></li>
-              <li id="work"><a href="/pages/work.html">WORK</a></li>
-              <li id="about"><a href="/pages/about.html">ABOUT</a></li>
-              <li id="contact"><a href="/pages/contact.html">CONTACT</a></li>
+              <li id="work"><a href="../pages/work.html">WORK</a></li>
+              <li id="about"><a href="../pages/about.html">ABOUT</a></li>
+              <li id="contact"><a href="../pages/contact.html">CONTACT</a></li>
             </ul>
           </nav>
         </div>
